cms/static/css/cms.css
/* ... */
@media screen and (max-width: 736px) {
  div.banner_buttons {
    display: none;
  }
}

.rich-text p {
  max-width: 100%;
  min-width: 50%;
  overflow: hidden;
}

.rich-text img {
  max-width: 100%;
  height: auto;
  margin: 0 1em;
}

.right {
  float: right;
  clear: both;
}

.left {
  float: left;
  clear: both;
}

.block-heading {
  margin: 1em;
}

.responsive-object {
    position: relative;
}

.responsive-object iframe,
.responsive-object object,
.responsive-object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#landing_page_hamburger > div > #beta-banner {
  position: relative !important;
}

#hamburger_content_id {
  left: -1000px;
  top: 0px;
  height: 100vh;
  transition: 0.4s;
  z-index: -1;
  position: absolute;
}

.show_hamburger {
  left: 0px !important;
  z-index: 9999 !important;
}

.assessment-text .rich-text {
  white-space: pre-wrap;
}

.w-200 {
  width: 200%;
}

.w-330 {
  width: 330%;
}

.w-33 {
  width: 33%;
}

.mr-5 {
  margin-right: 5%;
}

.r-0 {
  right: 0%;
}

.r-50 {
  right: 50%;
}

.r-115 {
  right: 115%;
}

.r-120 {
  right: 120%;
}

.r-230 {
  right: 230%;
}

.l-20 {
  right: -20%;
}

.tag-container {
  transition: all 0.4s ease-in-out;
  -webkit-transition: all 0.4s ease-in-out; /** Chrome & Safari **/
  -moz-transition: all 0.4s ease-in-out; /** Firefox **/
  -o-transition: all 0.4s ease-in-out; /** Opera **/
}

.h6 {
  height: 22rem;
}

.inactive {
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  opacity: 0.5;
}

/* taken from:
 https://css-tricks.com/equidistant-objects-with-css/#article-header-id-5
*/
.footer:after {
  content: '';
  width: 100%;
  display: inline-block;
}

.bottom--1-5 {
  bottom: -1.5rem;
}

.w-5 {
  width: 5%;
}

.w-95 {
  width: 95%;
}

.footer-block {
  border-bottom: solid 1px #c2c2c2;
}

.footer-block:first-of-type {
  border-top: solid 1px #c2c2c2;
}

.question-table:last-child {
  border-bottom: 0;
}

.left-40 {
  left: 40%;
}

.bottom--1-5 {
  bottom: -1.5rem;
}

.w-5 {
  width: 5%;
}

.w-95 {
  width: 95%;
}

.w-49 {
  width: 49%;
}

.mr-1p {
  margin-right: 1%;
}

.r-102 {
  right: 102%;
}

.r-204 {
  right: 204%;
}

.no-js {
  margin-top: 0 !important;
}

@media screen and (max-width:480px) {
  div.mobile-scrollbars::-webkit-scrollbar {
    width: 8px;
  }

  div.mobile-scrollbars::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
  }
}

.bb-hover:hover {
  border-bottom: 1px solid;
}

.bw2-hover:hover {
  border-width: 0.25rem;
}

.h7 {
  height: 30rem;
}

.bw1p {
  border-width: 1px;
}

@media screen and (min-width:30em) {
  .w-200-ns {
    width: 200%;
  }

  .w-5-ns {
    width: 5%;
  }

  .w-95-ns {
    width: 95%;
  }

  .w-49-ns {
    width: 49%;
  }

  .h4-5-ns {
    height: 12rem;
  }

  .h5-5-ns {
    height: 18rem;
  }

  .mr-1p-ns {
    margin-right: 1%;
  }

  .r-49-ns {
    right: 49%;
  }

  .r-111-ns {
    right: 111%;
  }

  .l-13-ns {
    right: -13%;
  }

  .r-18-ns {
    right: 18%;
  }

  .r-80-ns {
    right: 80%;
  }

  .block-paragraph {
    padding: 1em 2em;
  }

  .resource-brand .rich-text h2 {
    font-size: 4rem;
    margin-top: 1rem;
    margin-bottom: 2rem;
  }

  .resource-brand .rich-text p {
    font-size: 1.1rem;
  }

  .bottom--1-5-ns {
    bottom: -1.5rem;
  }
}

@media screen and (max-width: 90em) and (min-width: 30em) {
  .mt-2-8-ns-xl {
    margin-top: 2.8rem;
  }
}

@media screen and (max-width: 90em) and (min-width: 60em) {
  .w-82-l-xl {
    width: 82%;
  }
}

@media screen and (min-width: 90em) {
  .w-81-xl {
    width: 81%;
  }
}


@media screen and (min-width:60em) {
  .ph2-5-l {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }

  .bottom--1-2-l {
    bottom: -1.2rem;
  }

  .r-5-l {
    right: 5%;
  }

  .bottom--1-2-l {
    bottom: -1.2rem;
  }

  .w-200-l {
    width: 200%;
  }

  .l-12-l {
    right: -12%;
  }

  .r-50-l {
    right: 50%;
  }

  .r-112-l {
    right: 112%;
  }

  .mr-1p-l {
    margin-right: 1%;
  }

  .w-8-l {
    width: 8%;
  }
}

@media screen and (max-width: 60em) and (min-width: 30em) {
  .w-15-m {
    width: 15%;
  }
}

@media screen and (max-width: 65em) and (min-width: 60em) {
  .h4-5-ml {
    height: 13rem;
  }

  .bottom--1-6-ml {
    bottom: -1.6rem
  }

  .mb3-ml {
    margin-bottom: 1rem;
  }

  .w-10-ml {
    width: 10%;
  }

  .w-50-ml {
    width: 50%;
  }

  .w-100-ml {
    width: 100%;
  }
}

@media screen and (min-width: 47em) {
  .dn-sm {
    display: none;
  }

  .dt-sm {
    display: table;
  }

  .dt--fixed-sm {
    table-layout: fixed;
    width: 100%;
  }

  .dtc-sm {
    display: table-cell;
  }

  .fn-sm {
    float: none;
  }

  .pl3-sm {
    padding-left: 1rem;
  }

  .pt6-sm {
    padding-top: 8rem;
  }

  .mh2-sm {
    margin-left: .5rem;
    margin-right: .5rem;
  }

  .w-20-sm {
    width: 20%;
  }

  .w-80-sm {
    width: 80%;
  }

  .br1-no-left-sm {
    border-radius: 0 0.125rem 0.125rem 0 !important;
  }

  .br1-no-right-sm {
    border-radius: 0.125rem 0 0 0.125rem !important;
  }
}

@media screen and (max-width: 60em) and (min-width: 47em) {
  .w-30-mm {
    width: 30%;
  }

  .mh2-mm {
    margin-left: .5rem;
    margin-right: .5rem;
  }

}

@media screen and (max-width: 47em) and (min-width: 30em){
  .w-70-sm {
    width: 70%;
  }

  .pv-1-4-sm {
    padding-bottom: 1.4rem;
    padding-top: 1.4rem;
  }

  .w-100-sm {
    width: 100%;
  }

  .w-50-sm {
    width: 50%;
  }
}

@media screen and (max-width: 30em) {
  .mt5-s {
    margin-top: 4rem;
  }
  .pv-1-25-s {
    padding-bottom: 1.25rem;
    padding-top: 1.25rem;
  }
}

@media screen and (max-width: 47em) {
  .dn-ss {
    display: none;
  }
}
/* ... */

